alignment fixed

--- a/src/components/GetStarted/GetStarted.scss
+++ b/src/components/GetStarted/GetStarted.scss
@@ -146,7 +146,7 @@ background: linear-gradient(180deg, #373632, #111132);
       }
      @include mobile {
   margin-top: 0px;
-  padding: 5px 10px; // reduced from 10px 20px
+  padding: 8px 15px; // reduced from 10px 20px
 }
     }
 .map{
